frontend/src/css/mixins/_notification.css
#toast-container {
  position: fixed;
  top: 0;
  right: 0;
  width: auto;

}

.toast-toast {
  position: relative;
  padding: 8px 12px;
  margin: 16px;
  border-radius: 8px;
  background: red;
  cursor: pointer;
  box-shadow: 0 1px 6px rgba(0,0,0,0.08), 0 1px 3px rgba(0,0,0,0.19);
  animation-duration:  .3s;
  animation-name: toast;
  animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
}

.toast-fadeOut {
  animation-name: toastFadeOut;
  animation-duration: .3s;
  animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
  animation-fill-mode: forwards;
}

#toast-container p,
#toast-container h4 {
  margin: 3px 0!important;
}

.toast-title {
  font-weight: 700;
  font-size: 15px;
  margin-bottom: 10px;
}

.toast-text {
  font-size: 14px;
  color: #fff;
}

.toast-icon {
  position: absolute;
  top: 5px;
  left: -40px;
  width: 50px;
  height: 50px;
  border-radius: 100%;
  background: #FFF;
}

.toast-toast a, .cooltoast-toast a:hover {
  color: #549EDB !important;
  text-decoration: none !important;
}

/** toast types */
.toast-success {
  border-bottom: 2px solid #51C625;
}

.toast-warning {
  border-bottom: 2px solid #DB9215;
}

.toast-error {
  border-bottom: 2px solid #DB2B1D;
}

.toast-info {
  border-bottom: 2px solid #27ABDB;
}

@keyframes toast {
  from {
    transform: translate3d(400px, 0, 0);;
    opacity: 0;
  }
  to {
    transform: translate3d(0, 0, 0);
    opacity: 1;
  }
}

@keyframes toastFadeOut {
  from {
    transform: translate3d(0, 0, 0);
    opacity: 1;
  }
  to {
    transform: translate3d(400px, 0, 0);
    opacity: 0;
  }
}

